# RB_s2s

./: README.md  intall_tool.sh
745_experiments/: dump.sh  evaluate.py
745_experiments/MMM/: .outfilename  .srcfilename  MMM.h  _mmm.pluto.alg1.c  _mmm.pluto.orio.c  alg1_sr1  alg1_sr1.asm  alg1_sr2  alg1_sr2.asm  input_MMM  mmm.c  mmm.pluto.alg1.c  mmm.pluto.c  mmm.pluto.cloog  mmm.pluto.orio.c  no_opt1  no_opt2  orio_sr1  orio_sr1.asm  orio_sr2  orio_sr2.asm  p  p-control  pluto.sh  unroll_and_jam1  unroll_and_jam2
745_experiments/MVM/: .outfilename  .srcfilename  __tmpe  _mvm.pluto.alg1.c  _mvm.pluto.orio.c  alg1_sr1  alg1_sr1.asm  alg1_sr2  alg1_sr2.asm  input_MVM  mvm.c  mvm.pluto.alg1.c  mvm.pluto.c  mvm.pluto.cloog  mvm.pluto.orio.c  no_opt1  no_opt2  orio_sr1  orio_sr1.asm  orio_sr2  orio_sr2.asm  p  p-control  pluto.sh  unroll_and_jam1  unroll_and_jam2
745_experiments/back_prop/: .outfilename  .srcfilename  __tmpe  _back_prop.pluto.alg1.c  _back_prop.pluto.orio.c  alg1_sr1  alg1_sr1.asm  alg1_sr2  alg1_sr2.asm  back_prop.c  back_prop.pluto.alg1.c  back_prop.pluto.c  back_prop.pluto.cloog  back_prop.pluto.orio.c  input_backprop.txt  no_opt1  no_opt2  p  (+8 more)
doc/: DOC.txt  build_llvm-7.sh
lib/: pluto.h  plutolib.c  polyloop.c  program.cpp
rbalib/: CMakeLists.txt  input_CNN  input_MMM  input_MVM  input_backprop  input_backprop_1_1.txt  input_gem  input_gen  input_gradient.txt  input_gradient1,1.txt
rbalib/inc/: RB_analysis.h  utils.h
rbalib/src/: RB_analysis.c  main_algorithm.c  utils.c
tool/: ast_transform.c  ast_transform.h  main.cpp  pluto_codegen_if.c
(+120 files in other folders)
